# ros_mpu_9dof

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
config/: accelcal.txt  magcal.txt
launch/: imu_mpu9150.launch
src/: imu_mpu9150.cpp
src/linux-mpu9150/: imu.c
src/linux-mpu9150/mpu9150/: mpu9150.c
